metrics creations and code cleaning